# djangocms-form-builder

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: codecov.yml  codeql-analysis.yml  docs.yml  lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml
.tx/: config  transifex.yaml
djangocms_form_builder/: __init__.py  actions.py  apps.py  attributes.py  constants.py  entry_model.py  fields.py  forms.py  helpers.py  models.py  recaptcha.py  settings.py  urls.py  views.py
djangocms_form_builder/cms_plugins/: __init__.py  ajax_plugins.py  form_plugins.py  legacy.py
djangocms_form_builder/frameworks/: bootstrap5.py
djangocms_form_builder/frontends/: bootstrap5.py
djangocms_form_builder/locale/de/LC_MESSAGES/: django.mo  (+1 more)
djangocms_form_builder/migrations/: 0001_initial.py  0002_alter_form_cmsplugin_ptr_and_more.py  0003_auto_20230128_1949.py  0003_auto_20230128_2005.py  0003_auto_20230129_1950.py
djangocms_form_builder/templatetags/: form_builder_tags.py
djangocms_forms/: __init__.py  actions.py  apps.py  constants.py  fields.py  forms.py  helpers.py  models.py  recaptcha.py  settings.py
djangocms_forms/cms_plugins/: ajax_plugins.py  form_plugins.py
djangocms_forms/migrations/: 0001_initial.py
djangocms_forms/templatetags/: frontend_form_tags.py
docs/: Makefile  requirements.in  requirements.txt
docs/source/: conf.py  forms.rst  getting_started.rst  howto_guides.rst  index.rst  reference.rst
tests/: test_fields.py  test_form_registry.py  test_formeditor.py  test_helpers.py  test_migrations.py  test_models.py  test_settings.py
tests/frontend_forms/: test_formeditor.py
tests/requirements/: base.txt  dj32_cms40.txt  dj40_cms311.txt  dj41_cms311.txt  dj41_cms41.txt  dj42_cms311.txt  dj42_cms41.txt  dj50_cms41.txt
(+19 files in other folders)
