[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djangocms-form-builder"
dynamic = ["version"]
description = "Adds a form editor to the structure board of django CMS."
readme = "README.rst"
license.text = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "fsbraun", email = "fsbraun@gmx.de" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.2",
    "Framework :: Django CMS",
    "Framework :: Django CMS :: 3.10",
    "Framework :: Django CMS :: 3.11",
    "Framework :: Django CMS :: 3.8",
    "Framework :: Django CMS :: 3.9",
    "Framework :: Django CMS :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "django-cms>=3.7",
    "django-entangled",
    "Django>=3.2",
    "djangocms-attributes-field>=1",
]

[project.optional-dependencies]
reCaptcha = [
    "django-recaptcha",
]

[project.urls]
Homepage = "https://github.com/fsbraun/djangocms-form-builder"

[tool.hatch.version]
path = "djangocms_form_builder/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/djangocms_form_builder",
]
